--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node": "18.3.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.5.1",
     "nodemon": "^3.0.1"
   },
   "scripts": {
